--- a/parts/reddit/reddit.jade
+++ b/parts/reddit/reddit.jade
@@ -320,6 +320,16 @@ template(name='flat_pick_rtag')
         // if in_dev
         //     small #{count}
 
+template(name='flat_tag_picker')
+    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.basic.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        strong #{this}
+        // if in_dev
+        //     small #{count}
+
 
 
            
