working watson, including stack question

--- a/parts/client/style.css
+++ b/parts/client/style.css
@@ -42,7 +42,9 @@ body {
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
 }
-
+.search_tag {
+  margin:10px !important;
+}
 a {
   /*color: black !important;*/
 }
