--- a/parts/stack/client/q.jade
+++ b/parts/stack/client/q.jade
@@ -119,7 +119,7 @@ template(name='q')
                     // i.big.exclamation.circular.link.icon.get_answers
                     // +skve k='stack_section' v='main' l='content' i='content' 
                     unless watson
-                        .ui.big.fluid.button.call_watson
+                        .ui.big.fluid.button.call_watson_q
                             i.large.brain.icon
                             |analyze
                     .ui.grey.small.header.get_linked 
