--- a/parts/reddit/rpost_card.jade
+++ b/parts/reddit/rpost_card.jade
@@ -27,10 +27,10 @@ template(name='rpost_card')
                     |#{comment_count}
                     i.chat.outline.icon
                 with subreddit
-                    +flat_rtag_picker
+                    +flat_tag_picker
                     // .ui.basic.label #{this}
                 each five_tags
-                    +flat_rtag_picker
+                    +flat_tag_picker
                 a.ui.icon.compact.circular.basic.button(href="https://www.reddit.com#{permalink}" target='_window' title=domain)
                     // |#{domain}
                     i.external.icon
@@ -45,3 +45,80 @@ template(name='rpost_card')
                         |{{#markdown}} !{data.selftext_html} {{/markdown}}
             +print_this    
             i.reddit.icon.get_post
+    // .column.smallscroll(class=nightmode_class)
+    //     if embed
+    //         // span.f11.full
+    //         a.view_post(href="/p/#{_id}" class=post_header_class)
+    //             |!{embed}
+    //     else if is_image
+    //         a.view_post(href="/p/#{_id}" class=post_header_class)
+    //             img.ui.fluid.image.zoomer.toggle_view(src=data.url)
+    //     else if watson.metadata.image
+    //         img.ui.image.pointer.zoomer.call_meta(src=watson.metadata.image)
+    //     else if data.is_reddit_media_domain
+    //         a.view_post(href="/p/#{_id}" class=post_header_class)
+    //             img.ui.fluid.image.pointer(src=data.thumbnail)
+    //             // img.ui.centered.image.pointer.call_visual(src=data.url)
+    //     else if has_thumbnail
+    //         a.view_post(href="/p/#{_id}" class=post_header_class)
+    //             img.ui.fluid.image.pointer(src=data.thumbnail)
+    //     else if is_youtube
+    //         // .ui.fluid.embed
+    //         //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
+    //         iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+    //     else if preview_path
+    //         img(src=preview_path)
+    //     else if data.link_url
+    //         img.ui.image.pointer.call_visual(src=data.link_url)
+
+    //     // if image_link
+    //     //     a(href="/p/#{_id}")
+    //     //         img.ui.image(src=image_link)
+    //     // if image_id
+    //     //     a(href="/p/#{_id}")
+    //     //         img.ui.image(src="{{c.url image_id }}" )
+    //     // if youtube_id
+    //     //     +youtube_view key='youtube_id' label='youtube id'
+
+    //     .content
+    //         a.ui.header(href="/p/#{_id}" class=emotion_header_class) #{title}
+    //         div
+    //         // if data.selftext_html
+    //         //     a.f12(href="/p/#{_id}")
+    //         //         |!{data.selftext_html}
+    //         // else if data.selftext
+    //         //     a.f12(href="/p/#{_id}")
+    //         //         |!{data.selftext}
+                    
+    //         //     |!{description}
+    //         //     |!{body}
+    //         // .ui.tiny.icon.input
+    //         //     i.grey.tag.icon
+    //         //     input.add_tag(type='text' placeholder='+')
+    //         each seven_tags
+    //             +flat_tag_picker
+    //         .ui.compact.small.basic.button.pick_sub
+    //             |#{subreddit}
+    //             // .ui.small.button.pick_flat_tag #{this}
+    //         // each timestamp_tags
+    //         //     .ui.small.button.pick_flat_time #{this}
+    //         // if location
+    //         //     i.grey.marker.icon
+    //         //     |#{location}
+    //         if in_dev
+    //             +print_this
+    //         |{{ufrom data.created}}
+    //         // if watson
+    //         //     +doc_emotion_small
+    //         // i.thumbs.up.outline.grey.link.icon.upvote
+    //         // |#{points}
+    //         // i.thumbs.down.outline.grey.link.icon.downvote
+    //         // i.chat.outline.grey.icon
+    //         // |#{comment_count}
+    //         // +voting
+    //         // if in_dev
+    //         //     i.large.lock.link.grey.icon.make_private
+    //         // a.ui.icon.large.button(href="/p/#{_id}")
+    //         //     |#{views}
+    //         //     i.chevron.right.large.icon
+    //     //   +comments
