--- a/parts/stack/client/site.jade
+++ b/parts/stack/client/site.jade
@@ -17,7 +17,7 @@ template(name='sq')
                         input.search_site(type='text')
                     .smallscroll                    
                         each site_tags
-                            +stag_picker
+                            +tag_picker
                     // if site_emotions.count
                     //     +skve k='view_emotions' v=true l="emotions" i='smile' ionly=false
                     //     if skv_is 'view_emotions' true
@@ -76,28 +76,28 @@ template(name='sq')
                             .ui.divider
                 .four.wide.column.scrollin
                     each site_emotions
-                        // +stag_picker
+                        // +tag_picker
                         .ui.large.label(title=count) #{name}
                     // if site_person.count
                     //     +skve k='view_people' v=true l="people" i='users' ionly=false
                     //     if skv_is 'view_people' true
                     each site_persons
-                        +stag_picker
+                        +tag_picker
                     // if site_organizations.count
                     //     +skve k='view_orgs' v=true l="organisations" i='building' ionly=false
                     //     if skv_is 'view_orgs' true
                     each site_organizations
-                        +stag_picker
+                        +tag_picker
                     // if site_locations.count
                     //     +skve k='view_locations' v=true l="locations" i='marker' ionly=false
                     //     if skv_is 'view_locations' true
                     each site_locations
-                        +stag_picker
+                        +tag_picker
                     // if site_companys.count
                     //     +skve k='view_companies' v=true l="companies" i='briefcase' ionly=false
                     //     if skv_is 'view_companies' true
                     each site_companys
-                        +stag_picker
+                        +tag_picker
                     with emotion_avg
                         // .ui.list
                         //     .item {{ to_percent avg_sent_score}}% sentiment
@@ -233,7 +233,7 @@ template(name='s_q_item')
                 .say.pointer.goto_q !{body}
                 .ui.horizontal.list
                     each tags
-                        +flat_stag_picker
+                        +flat_tag_picker
             .ui.horizontal.list
                 with owner
                     a.ui.small.header.item(href="/s/#{../site}/u/#{user_id}")
@@ -250,21 +250,3 @@ template(name='s_q_item')
             +print_this
                 // .ui.label user_id #{user_id}
             // .ui.divider
-template(name='stag_picker')
-    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.small.tertiary.compact.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
-        strong !{name}
-        // if in_dev
-        //     small #{count}
-template(name='flat_stag_picker')
-    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.basic.small.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
-        strong #{this}
-        // if in_dev
-        //     small #{count}
