--- a/client/home.jade
+++ b/client/home.jade
@@ -1,18 +1,30 @@
 template(name='home')
     .ui.stackable.padded.grid
-        .sixteen.wide.column
+        .eight.wide.column
+            .ui.header Reddit
             a.ui.icon.header(href='/reddit')
                 i.searchs.icon
-                |search
+                |reddit search
             a.ui.icon.header(href='/subs')
                 i.reddit.icon
-                |reddit
+                |subreddits
                 
+            a.ui.icon.header(href='/rusers')
+                i.users.icon
+                |reddit users
+                
+        .eight.wide.column
+            .ui.header Stack Exchange
             a.ui.icon.header(href='/stack')
                 i.stack.exchange.icon
-                |stack exchange
+                |stack exchange sites
+            a.ui.icon.header(href='/susers')
+                i.stack.exchange.icon
+                |stack exchange users
             
-            
+        .ui.header 
+            i.food.icon
+            |food     
             
             
             
